2006-03-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.ncol) : added predef
	argument
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_ncol) : 
	added predef argument

2006-03-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai,layout.merge) :
	verbose option (progress bar) added
	* interfaces/R/src/rinterface.c (R_igraph_progress_handler) : added
	(R_igraph_layout_kamada_kawai, R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold)
	(R_igraph_layout_fruchterman_reingold_3d, R_igraph_layout_merge_dla) :
	updated for verbose option

2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.merge) : add graph list 
	parameter
	* interfaces/R/src/rinterface.c (R_igraph_layout_merge_dla) : updated

	* interfaces/R/igraph/R/operators.r (graph.disjoint.union) :
	bug corrected, calls R_igraph_disjoint_union

	* interfaces/R/igraph/R/operators.R (graph.compose, "%c%") : added
	* interfaces/R/src/rinterface.c (R_igraph_compose) : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.complementer) : added
	* interfaces/R/src/rinterface.c (R_igraph_complementer) : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.difference, "%m%") : added
	* interfaces/R/src/rinterface.c (R_igraph_difference) : added

2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R 
	(igraph.union, igraph.disjoint.union) : first renamed to second 
	(igraph.union, "%u%") : added
	* interfaces/R/src/rinterface.c	
	(R_igraph_union, R_igraph_disjoint_union) : first renamed to second
	(R_igraph_union) : added
	
2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.intersection, "%s%") : added
	("%u%", "%du%") : "%u%" renamed to "%du%"